--- a/src/main/webapp/script/caso/Edit.xhtml
+++ b/src/main/webapp/script/caso/Edit.xhtml
@@ -936,7 +936,7 @@
 
                                 <script type="text/javascript">
                                     $(function () {
-                                        $(".select2Input").select2({
+                                        $("select.select2Input").select2({
                                             dropdownAutoWidth: true,
                                             allowClear: true
                                         });
