--- a/src/main/webapp/script/vista/Create.xhtml
+++ b/src/main/webapp/script/vista/Create.xhtml
@@ -2,60 +2,97 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:ui="http://java.sun.com/jsf/facelets"
+      xmlns:p="http://primefaces.org/ui"
       xmlns:h="http://java.sun.com/jsf/html"
       xmlns:f="http://java.sun.com/jsf/core"
-      xmlns:p="http://primefaces.org/ui"
       xmlns:go="http://java.sun.com/jsf/composite/go">
 
-    <ui:composition template="/script/template_inbox.xhtml">
+    <ui:composition template="/script/template_inbox_bootstrap.xhtml">
         <ui:define name="title">
             <h:outputText value="#{bundle.CreateVistaTitle}"></h:outputText>
         </ui:define>
-
-        <ui:define name="west">
-            <p:panel>
-                <h:outputLabel escape="false" value="Las vistas reúnen un grupo de casos según un conjunto de criterios que 
-                               expresan una variedad de estados del caso como, por ejemplo, Nuevo, En proceso o Solucionado. 
-                               Las vistas permiten crear grupos coherentes de casos para asi poder acceder más rapidamente a los casos de interés."/>
-            </p:panel>
+        <ui:define name="help">
+            <h:outputText  value="Las vistas reúnen un grupo de casos según un conjunto de criterios que 
+                           expresan una variedad de estados del caso como, por ejemplo, Nuevo, En proceso o Solucionado. 
+                           Las vistas permiten crear grupos coherentes de casos para asi poder acceder más rapidamente a los casos de interés." escape="false"/>
         </ui:define>
 
         <ui:define name="body">
+            <!-- page-header -->
+            <div class="page-header">
+                <div class="row">
+                    <div class="col-sm-10 col-xs-10">
+                        <h1><i class="fa fa-users page-header-icon"></i>&nbsp;&nbsp;Crear Nueva Vista</h1>
+                        <p:commandLink title="Help" onclick="PF('helpDialog').show()" styleClass="text-info" >
+                            <i class="fa fa-info-circle"/>
+                        </p:commandLink> 
+                    </div>
 
-            <h:form id="form">
-                <h1>Crear Nueva Vista</h1>
-                <p:messages id="messages"/>
-                <h:panelGrid columns="2">
-                    <h:outputLabel value="#{bundle.VistaLabel_nombre}" for="nombre" style="font-weight: bold"/>
-                    <p:inputText styleClass="noupdate" id="nombre" value="#{vistaController.selected.nombre}" style="width: 100%;"
-                                 title="#{bundle.VistaTitle_nombre}" required="true" requiredMessage="#{bundle.VistaRequiredMessage_nombre}"/>
+                </div>
+            </div><!-- / .page-header --> 
+            <h:form>
 
+                <p:messages />
+                <div class="row">
+                    <div class="col-sm-9 col-lg-6">
+                        <div class="form-group">
+                            <label class="control-label">#{bundle.VistaLabel_nombre}</label>
+                            <p:inputText id="nombre" value="#{vistaController.selected.nombre}" 
+                                         styleClass="form-control noupdate"
+                                         title="#{bundle.VistaTitle_nombre}" 
+                                         required="true" requiredMessage="#{bundle.VistaRequiredMessage_nombre}"/>
+                            <h:message for="nombre" errorClass="text-danger"/>
+                        </div>
+                        <div class="form-group">
+                            <label class="control-label">Criterios</label>
 
-                    <h:outputLabel value="Criterios:" style="font-weight: bold"/>
+                            <go:filterView id="panelFilter0" controllerMBean="#{vistaController}" 
+                                           vista="#{vistaController.selected}"
+                                           filterHelper="#{vistaController.filterHelper2}"
+                                           showApplyAction="false"
+                                           showSearchBar="false"
+                                           showEdit="false"
+                                           showSaveAs="false"
+                                           update="@(form)"/>
 
-                    <go:filterView id="panelFilter0" controllerMBean="#{vistaController}" vista="#{vistaController.selected}"
-                                   filterHelper="#{vistaController.filterHelper2}"
-                                   showApplyAction="false"
-                                   showSearchBar="false"
-                                   showEdit="false"
-                                   showSaveAs="false"
-                                   update=":mainform:messages :form:panelFilter0:panelFilter :form"
-                                   />
+                        </div>
+                        <div class="form-group">
+                            <label class="control-label">Visibilidad</label>
 
+                            <go:visibility id="VisibilidadPanel" controllerMBean="#{vistaController}"/>
 
-                    <h:outputLabel value="Visibilidad" for="VisibilidadPanel" style="font-weight: bold"/>
+                        </div>
+                        <div class="form-group">
+                            <label class="control-label">#{bundle.VistaLabel_descripcion}</label>
 
-                    <go:visibility id="VisibilidadPanel" controllerMBean="#{vistaController}"/>
+                            <p:inputTextarea styleClass="form-control noupdate" 
+                                             id="descripcion" value="#{vistaController.selected.descripcion}" 
+                                             title="#{bundle.VistaTitle_descripcion}" />
 
-                    <h:outputLabel value="#{bundle.VistaLabel_descripcion}" for="descripcion" style="font-weight: bold"/>
-                    <p:inputTextarea styleClass="noupdate" id="descripcion" value="#{vistaController.selected.descripcion}" title="#{bundle.VistaTitle_descripcion}" style="width: 100%;"/>
+                            <h:message for="descripcion" errorClass="text-danger"/>
+                        </div>
 
-                </h:panelGrid>
+                        <div class="btn-group">
+                            <p:commandLink action="#{vistaController.goBack()}" 
+                                           styleClass="btn btn-default btn-flat" 
+                                           ajax="false" immediate="true">
+                                <i class=""></i> #{bundle.Cancel}
+                            </p:commandLink>
+                        </div>
 
-                <br />
-                <p:commandButton ajax="false" action="#{vistaController.create}" value="Finalizar" update=":mainform:messages"/>
+                        <div class="btn-group">
+                            <p:commandLink action="#{vistaController.create}" 
+                                           ajax="false" update="@form"
+                                           styleClass="btn btn-primary btn-flat" 
+                                           onclick="jQuery(this).addClass('ui-state-disabled');
+                                                   jQuery(this).children().addClass('fa fa-refresh fa-spin')">
+                                <i class=""></i> #{bundle.SaveLink}
+                            </p:commandLink>
+                        </div>
 
-                <p:commandButton ajax="false" action="#{vistaController.goBack()}" value="Cancelar" immediate="true"/>
+                    </div>
+                </div>
+
 
             </h:form>
         </ui:define>
