--- a/src/main/webapp/script/producto/Create.xhtml
+++ b/src/main/webapp/script/producto/Create.xhtml
@@ -31,76 +31,61 @@
 
                 <p:messages globalOnly="true"/>
                 <div class="row">
-                    <div class="col-sm-12">
+                    <div class="col-sm-6 col-lg-4">
                         <div class="form-group">
-                            <label class="col-sm-1 control-label">#{bundle.CreateProductoLabel_idProducto}</label>
-                            <div class="col-sm-4">
-                                <p class="form-control-static"> 
-                                    <h:inputText styleClass="form-control" id="idProducto" value="#{productoController.selected.idProducto}" required="true" requiredMessage="#{bundle.RequiredMessage}"/>
-                                </p>
-                                <p:message for="idProducto"/>
-                            </div>
+                            <label class="control-label">#{bundle.CreateProductoLabel_idProducto}</label>
+                            <h:inputText styleClass="form-control" id="idProducto" 
+                                         value="#{productoController.selected.idProducto}" required="true" 
+                                         requiredMessage="#{bundle.RequiredMessage}"/>
+                            <h:message for="idProducto" errorClass="text-danger"/>
                         </div>
                         <div class="form-group">
-                            <label class="col-sm-1 control-label">#{bundle.CreateProductoLabel_nombre}</label>
-                            <div class="col-sm-4">
-                                <p class="form-control-static"> 
-                                    <h:inputText styleClass="form-control" id="nombre" value="#{productoController.selected.nombre}" required="true" requiredMessage="#{bundle.RequiredMessage}" />
-                                </p>
-                                <p:message for="nombre"/>
-                            </div>
+                            <label class="control-label">#{bundle.CreateProductoLabel_nombre}</label>
+                            <h:inputText styleClass="form-control" id="nombre" 
+                                         value="#{productoController.selected.nombre}" required="true" 
+                                         requiredMessage="#{bundle.RequiredMessage}" />
+                            <h:message for="nombre" errorClass="text-danger"/>
                         </div>
                         <div class="form-group">
-                            <label class="col-sm-1 control-label">#{bundle.CreateProductoLabel_descripcion}</label>
-                            <div class="col-sm-4">
-                                <p class="form-control-static"> 
-                                    <h:inputTextarea styleClass="form-control" id="descripcion" value="#{productoController.selected.descripcion}"  cols="50" />
-                                </p>
-                                <p:message for="descripcion"/>
-                            </div>
+                            <label class="control-label">#{bundle.CreateProductoLabel_descripcion}</label>
+                            <h:inputTextarea styleClass="form-control" id="descripcion" value="#{productoController.selected.descripcion}"  cols="50" />
+                            <h:message for="descripcion" errorClass="text-danger"/>
                         </div>
                         <div class="form-group">
-                            <label class="col-sm-1 control-label">Canal de salida por defecto:</label>
-                            <div class="col-sm-4">
-                                <p class="form-control-static"> 
-                                    <h:selectOneMenu styleClass="form-control" id="idCanalSalida" style="width: 300px;"
-                                                     filter="true" filterMatchMode="contains"
-                                                     value="#{productoController.selected.idOutCanal}">
-                                        <f:selectItem itemLabel="" itemValue=""/>
-                                        <f:selectItems value="#{canalController.emailsAvailableSelectOne}" var="tipo" itemLabel="#{tipo.nombre}" itemValue="#{tipo}" itemDescription="#{tipo.descripcion}"/>
-                                    </h:selectOneMenu>
-                                </p>
-                                <p:message for="descripcion"/>
-                            </div>
+                            <label class="control-label">Canal de salida por defecto:</label>
+                            <h:selectOneMenu styleClass="form-control" id="idCanalSalida" style="width: 300px;"
+                                             filter="true" filterMatchMode="contains"
+                                             value="#{productoController.selected.idOutCanal}">
+                                <f:selectItem itemLabel="" itemValue=""/>
+                                <f:selectItems value="#{canalController.emailsAvailableSelectOne}" var="tipo" 
+                                               itemLabel="#{tipo.nombre}" itemValue="#{tipo}" 
+                                               itemDescription="#{tipo.descripcion}"/>
+                            </h:selectOneMenu>
+                            <h:message for="idCanalSalida" errorClass="text-danger"/>
                         </div>
 
+                        <div class="btn-group">
+                            <p:commandLink action="#{productoController.prepareList}" 
+                                           styleClass="btn btn-default btn-flat" 
+                                           ajax="false" immediate="true"
+                                           onclick="jQuery(this).addClass('ui-state-disabled');
+                                                   jQuery(this).children().addClass('fa fa-refresh fa-spin')">
+                                <i class=""></i> #{bundle.Cancel}
+                            </p:commandLink>
+                        </div>
 
-
-
-
-
-
-
-
-
+                        <div class="btn-group">
+                            <p:commandLink action="#{productoController.create}" 
+                                           ajax="false"
+                                           styleClass="btn btn-primary btn-flat" 
+                                           onclick="jQuery(this).addClass('ui-state-disabled');
+                                                   jQuery(this).children().addClass('fa fa-refresh fa-spin')">
+                                <i class=""></i> #{bundle.SaveLink}
+                            </p:commandLink>
+                        </div>
                     </div>
                 </div>
-
-
-
-
-
-                <p:toolbar> 
-                    <p:toolbarGroup align="left">   
-                        <p:commandButton action="#{productoController.create}" value="#{bundle.SaveLink}" ajax="false" icon="ui-icon-disk"/>        
-                        <p:separator/>   
-                        <p:commandButton action="#{productoController.prepareList}" value="#{bundle.ShowAllLink}" immediate="true" ajax="false" icon="ui-icon-folder-open"/>
-                    </p:toolbarGroup>
-                </p:toolbar>
-
-
             </h:form>
         </ui:define>
     </ui:composition>
-
 </html>
